* Added the support for UVRandomMapping2D
* Added the support for LocalRandomMapping3D
* Added the support for Caustic AOV when using hybrid rendering
* Added the support for TwoSided material
* Reworked WhiteBalance plugin and light groups white balance support to be coherent with usual photographic white balance process (note: this change breaks the compatibility with past scene settings)

### Fixed Bugs

* Added the support for pixel filtering to light tracing (issue #413)
* Now LuxCore works even if OpenCL is available but not a valid OpenCL ICD platform has been found (issue #422)
* Fixed a problem with cloth material when using CUDA and Windows (issue #417)
* Fixed a problem in glossy coating albedo evaluation on GPUs
* Fixed a difference between CPU and GPU rendering when using a roughglass with a shadow transparency color
* Fixed the support in .ply files for triangle AOVs
* Fixed a memory leak when rendering with OpenCL (noticeable when rendering animations)
* Fixed text export of brick texture HERRINGBONE and BASKET
* Fixed scale problem in GPU code for brick texture HERRINGBONE and BASKET (issue #438)
* Fixed a possible crash when using trilinear texture with GPUs
* Reworked some condition in hybrid rendering light tracing to solve the problem of flashing caustics (issue #441)
* Fixed a problem with Blender Translation language preference option and scene export on file

Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
of release notes.

### Known Problems and limitations

* accelerator.bvh.builder.type = EMBREE_MORTON doesn't work with the latest Embree
* Python crashes when calling sys.exit()
* TILEPATHOCL (and RTPATHOCL) count the layers of transparent surfaces as an iteration of the rendering finite state machine so they require to increase the max. path depth to avoid black regions.